corpus/general.txt
==================
idk something
==================

GARFILDO:
    Something
---
~FORMIKO:
    Something
[sono]
    Bang!
---
JONO:
    Something stupid
GARFILDO:
    Something funny

---

(source_file
    (panel
        (line
            (speaker
                (character)
                (colon)
            )
            (text)
        )
    )
    (divider)
    (panel
        (line
            (speaker
                (tilde)
                (character)
                (colon)
            )
            (text)
        )
        (line
            (speaker
                (bracket_l)
                (special)
                (bracket_r)
            )
            (text)
        )
    )
    (divider)
    (panel
        (line
            (speaker
                (character)
                (colon)
            )
            (text)
        )
        (line
            (speaker
                (character)
                (colon)
            )
            (text)
        )
    )
)

